// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TimeSelector > should render correctly when disabled 1`] = `
<div
  className=""
>
  <input
    className="govuk-input govuk-date-input__input govuk-input--width-4"
    disabled={true}
    id="publish-start-time"
    name="publishStartTime"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="N/A"
    type="text"
    value=""
  />
</div>
`;

exports[`TimeSelector > should render correctly with errors 1`] = `
<div
  className=""
>
  <span
    className="govuk-error-message"
    id="publish-start-time-error"
  >
    <span
      className="govuk-visually-hidden"
    >
      Error: 
    </span>
    Enter a time in hhmm format
  </span>
  <input
    aria-describedby="publish-start-time-error"
    className="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input--error"
    disabled={false}
    id="publish-start-time"
    name="publishStartTime"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="hhmm"
    type="text"
    value=""
  />
</div>
`;

exports[`TimeSelector > should render correctly with inputs 1`] = `
<div
  className=""
>
  <input
    className="govuk-input govuk-date-input__input govuk-input--width-4"
    disabled={false}
    id="publish-start-time"
    name="publishStartTime"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="hhmm"
    type="text"
    value="0900"
  />
</div>
`;

exports[`TimeSelector > should render correctly with no inputs 1`] = `
<div
  className=""
>
  <input
    className="govuk-input govuk-date-input__input govuk-input--width-4"
    disabled={false}
    id="publish-start-time"
    name="publishStartTime"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="hhmm"
    type="text"
  />
</div>
`;
